[tool.poetry]
name = "dokku-py"
version = "0.1.0"
description = ""
authors = ["lee ji-ho <search5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
dokku = 'dokku_py:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
