[tool.poetry]
name = "dokku-py"
version = "0.1.0"
description = "Python version of the Dokku CLI"
authors = ["lee ji-ho <search5@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/search5/dokku-py"
keywords = ["dokku"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
dokku = 'dokku_py:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
